# sonoff-edge

./: .gitignore  .gitmodules  README.md
driver/: config.yml
driver/profiles/: light.yaml  plug.yaml  sonoff-bridge.v1.yaml  switch1.yaml  switch2.yaml  switch3.yaml  switch4.yaml  uiid1.yaml  uiid44.yaml
driver/src/: api.lua  command_handlers.lua  discovery.lua  init.lua
driver/src/lockbox/: init.lua
driver/src/lockbox/cipher/: aes128.lua
driver/src/lockbox/cipher/mode/: cbc.lua
driver/src/lockbox/digest/: md5.lua
driver/src/lockbox/padding/: zero.lua
driver/src/lockbox/util/: array.lua  bit.lua  queue.lua  stream.lua
hub/: ewelink.js  pyproject.toml
hub/src/: __main__.py  debug.py  ewelink
mdns-browser/: pyproject.toml
mdns-browser/src/: __main__.py
tools/: pack  setup.sh
