[tool.poetry]
name = "mdns-browser"
version = "0.1.0"
description = ""
authors = ["mystifier <mystifier0505@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zeroconf = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
